test/sema/return-no-value-in-non-void-function.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

int foo() {
    // CHECK: [[@LINE+1]]:5: error: expected return statement to return a value of type 'int'
    return;
}
